2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: match_disklist(): replace vstrextend() with a
	  GString; fix spelling mistake
	* installcheck/amadmin.pl: account for spelling mistake

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: xml_scripts(): replace vstrextend() with a
	  GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: xml_application(): replace vstrextend() with a
	  GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: xml_property(): replace vstrextend() with a
	  GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: xml_estimate(): replace vstrextend() with a
	  GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: xml_optionstr(): replace vstrextend() with a
	  GPtrArray and a GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/diskfile.c: optionstr(): replace vstrextend() with a
	  GPtrArray

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/amindexd.c: main(): replace vstrextend() with a GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* server-src/amcheck.c: start_host(): replace vstrextend() with a
	  GString

2011-06-05  Francis Galiegue <fgaliegue@gmail.com>
	* recover-src/extract_list.c: read_amidxtaped_data(): replace
	  vstrextend() with g_strdup_printf()

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/util.c: remove usage of vstrextend() by using a GString. No
	  choice here, we have to peek into the GPtrArray.

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/tapelist.c: remove usages of vstrextend() with a
	  GPtrArray/GString combination

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>
	* common-src/pipespawn.c: remove usage of vstrextend() with a GPtrArray

2011-06-04  Francis Galiegue <fgaliegue@gmail.com>